--- a/_posts/2022-11-29-LVI-SAM.md
+++ b/_posts/2022-11-29-LVI-SAM.md
@@ -7,7 +7,7 @@ author:     "ZhouSh"
 header-img: "img/in_post/LVI-SAM/head.png"
 header-mask: 0.3
 tags:
-    - SLAM论文
+    - 论文笔记
 ---
 论文：[LVI-SAM: Tightly-coupled Lidar-Visual-Inertial Odometry via Smoothing and Mapping](https://arxiv.org/pdf/2104.10831v2.pdf)
 
