--- a/_posts/2023-05-01-kitty.md
+++ b/_posts/2023-05-01-kitty.md
@@ -118,6 +118,8 @@ tags:
 
 ### 安全问题
 
+一定要封窗！
+
 有些植物对它来说是有毒的，例如万年青、水仙花、百合花、杜鹃花等。浑身是刺的仙人掌也会扎伤猫的嘴巴。
 
 不要给猫咪吃饼干、甜食、葡萄干、洋葱、章鱼、乌鱼、生鱼、鸡骨、鱼骨、牛奶、奶油、冰激凌、巧克力、茶、咖啡等。
