--- a/_posts/2022-11-27-weicheng.md
+++ b/_posts/2022-11-27-weicheng.md
@@ -19,7 +19,7 @@ tags:
 
 这船，倚仗人的机巧，载满人的扰攘，寄满人的希望，热闹地行着，每分钟把沾污了人气的一小方水面，还给那无情、无尽、无际的大海。
 
-这一张文凭，仿佛有亚当、夏娃下身那片树叶的功用，可以遮羞包丑；小小一方纸能把一个人的空疏、寡陋、愚笨都掩盖起来。自己没有文凭，好像精神上赤条条的，没有包裹。
+**这一张文凭，仿佛有亚当、夏娃下身那片树叶的功用，可以遮羞包丑；小小一方纸能把一个人的空疏、寡陋、愚笨都掩盖起来。自己没有文凭，好像精神上赤条条的，没有包裹。**
 > ☝ 依稀记得高中时也摘抄过这句话
 
 方鸿渐把这种巧妙的词句和精密的计算来抚慰自己，可是失望、遭欺骗的情欲、被损伤的骄傲，都不肯平伏，像不倒翁，捺下去又竖起来，反而摇摆得厉害。
@@ -30,7 +30,7 @@ tags:
 
 #### 三
 
-她跟辛楣的长期认识并不会日积月累地成为恋爱，好比冬季每天的气候罢，你没法把今天的温度加在昨天的上面，好等明天积成个和暖的春日。
+**她跟辛楣的长期认识并不会日积月累地成为恋爱，好比冬季每天的气候罢，你没法把今天的温度加在昨天的上面，好等明天积成个和暖的春日。**
 
 出洋好比出痘子，出痧子，非出不可。小孩子出过痧痘，就可以安全长大，以后碰见这两种毛病，不怕传染。我们出过洋，也算了了一桩心愿，灵魂健全，见了博士硕士们这些微生虫，有抵抗力来自卫。
 
@@ -63,7 +63,7 @@ tags:
 
 侯营长有个桔皮大鼻子，鼻子上附带一张脸，脸上应有尽有，并未给鼻子挤去眉眼，鼻尖生几个酒刺，像未熟的草莓。
 
-鸿渐想起唐小芙和自己，心像火焰的舌头突跳而起，说：“想到你还是想你？我们一天要想到不知多少人，亲戚、朋友、仇人，以及不相干的见过面的人。真正想一个人，记挂着他，希望跟他接近，这少得很。人事太忙了，不许我们全神贯注，无间断地怀念一个人。我们一生对于最亲爱的人的想念，加起来恐怕不到一刻钟，此外不过是念头在他身上瞥过，想到而已。”
+鸿渐想起唐小芙和自己，心像火焰的舌头突跳而起，说：“**想到你还是想你？**我们一天要想到不知多少人，亲戚、朋友、仇人，以及不相干的见过面的人。真正想一个人，记挂着他，希望跟他接近，这少得很。人事太忙了，不许我们全神贯注，无间断地怀念一个人。我们一生对于最亲爱的人的想念，加起来恐怕不到一刻钟，此外不过是念头在他身上瞥过，想到而已。”
 
 那天晚上，大家睡熟了还觉得饿，仿佛饿宣告独立，具体化了，跟身子分开似的。
 
@@ -81,11 +81,11 @@ tags:
 
 #### 八
 
-睡眠这东西脾气怪得很，不要它，它偏会来，请它，哄它，千方百计勾引它，它拿身分躲得影子都不见。
+**睡眠这东西脾气怪得很，不要它，它偏会来，请它，哄它，千方百计勾引它，它拿身分躲得影子都不见。**
 
 #### 九
 
-廉耻并不廉，许多人维持它不起。
+**廉耻并不廉，许多人维持它不起。**
 
 房子比职业更难找。满街是屋，可是轮不到他们住。上海仿佛希望每个新来的人都像只戴壳的蜗牛，随身带着宿舍。
 
