--- a/_posts/2023-04-16-5000days.md
+++ b/_posts/2023-04-16-5000days.md
@@ -25,13 +25,13 @@ tags:
 在镜像世界中，“历史”成为动词。
 > 描述的是在镜像世界中，你来到一个地方，可以发出指令调整时间轴看到它几百年前的样子。
 
-但是历史告诉我们，没有一个公司可以笑傲下一个时代。因为它们的成功会成为它们最大的桎梏。
+但是历史告诉我们，没有一个公司可以笑傲下一个时代。因为**它们的成功会成为它们最大的桎梏**。
 > 一旦公司成功，就容易捧着它的奖杯很难放下，很难放开双手去别的赛道上拼搏。再加上从一座山峰到另一座是需要先下山的，资本不一定有时间有耐心等你爬下爬上。facebook转型meta是下山了，与此同时扎克伯格也身价暴跌。
 
 无论什么样的科技，在解决问题的同时都会带来新的问题。重要的是我们如何减少这些问题。
 
 畏首畏尾的人是无法采取理性行动的，只会做出蠢事。
-> 还有一句话是：悲观者正确，乐观者成功。
+> 还有一句话是：**悲观者正确，乐观者成功。**
 
 假如老年人能够自如地运用最新科技，年轻人将情何以堪？如果一个既有经验又有阅历的老人同时还掌握着最新的技术，恐怕世界上将不再有年轻人的就业机会。
 > 希望我老了之后也能跟上时代的潮流，想来应该也不难，保持学习即可，另外还要勇于尝试。
@@ -44,14 +44,14 @@ tags:
 AI究竟是“剥夺了我们的工作机会”，还是“催生了新的就业可能”？关于这一点的讨论，还会在很长时间内持续下去。不过，我猜测，再过50年的时间，比起被剥夺工作机会，新技术会创造更多的新的就业可能。虽然有些工作必然会消失，但是总体而言，工作机会会越来越多。到了那个时候，又将有新的AI诞生，人类注定还要产生同样的担忧。
 > 与其说担心被取代，不如说是历史的车轮滚滚向前是必然的。前几天听到一个想法是：人类这个物种或许会被自己创造的AI取代，但人类应该荣幸于成为AI的垫脚石。物种迭代也许只是宇宙的一环。
 
-著名的科幻作家阿瑟·C.克拉克曾经说过这样的话：“想象自动化是非常简单的事情，比如，想象马车如何发展为汽车不是一件难事。但是，自动化带来的真正的重大影响，其实是汽车这项发明带来的次生效应。例如交通堵塞，以及由此产生的上下班高峰，还有全新的汽车电影院等，这些都是次生效应。在一个新事物产生之初，我们很难预知它的影响会波及哪些方面。”同理，我们比较容易想象出“X+AI”的组合，但是很难预测由此造成的影响。
+著名的科幻作家阿瑟·C.克拉克曾经说过这样的话：“想象自动化是非常简单的事情，比如，想象马车如何发展为汽车不是一件难事。但是，**自动化带来的真正的重大影响，其实是汽车这项发明带来的次生效应。**例如交通堵塞，以及由此产生的上下班高峰，还有全新的汽车电影院等，这些都是次生效应。在一个新事物产生之初，我们很难预知它的影响会波及哪些方面。”同理，我们比较容易想象出“X+AI”的组合，但是很难预测由此造成的影响。
 
 ## 第三章 所有产业都将因科技重塑
 
 每一个冠以smart的新概念都可以替换成hackable。以智慧城市为例，如果表述为可操控城市(hackable city)，我们就会立即联想到遍布大街小巷的监控摄像头和个人信息监管制度（这样的制度耗费社会资源，是时候叫停了）。由此可见，表述方式稍作转换，我们就会更容易发现新技术的普及应用有哪些问题，并会对此进行反思。
 
 卢旺达已经开始使用无人机配送药物。因为在卢旺达道路建设还很落后，很多地区甚至没有路。为了将药物和其他重要物资快速稳妥地送达指定地点，人们启用了无人机，而且效果很好。在我们这些基础建设做得很到位的国家，日常生活中可能并没有使用无人机的必要。
-> 转：颠覆性技术的大面积应用往往发生在你意想不到的地区和领域。越是落后的地方，越是有革新的需求。
+> 转：颠覆性技术的大面积应用往往发生在你意想不到的地区和领域。**越是落后的地方，越是有革新的需求。**
 
 ## 第四章 亚洲的时代与科技地缘政治
 
@@ -66,7 +66,7 @@ AI究竟是“剥夺了我们的工作机会”，还是“催生了新的就业
 
 当我们看到出现了一个愚蠢甚至是有害的科技时，最合理的反应不是“减少科技发明，停止一切”，而是要致力于发明更好的科技。这才是面对问题时应有的姿态。
 
-乐观主义会让未来在眼前清晰可见，这一点和电影界制作预告片很像。但同时我们也需要保持一定的审慎和批判态度。用汽车来打比方的话，乐观是让汽车行进的油门，而悲观是在弯道和停车时需要用到的刹车。这两者都不可或缺，但是想要前进，我们必须要多踩油门而不是刹车。
+乐观主义会让未来在眼前清晰可见，这一点和电影界制作预告片很像。但同时我们也需要保持一定的审慎和批判态度。用汽车来打比方的话，**乐观是让汽车行进的油门，而悲观是在弯道和停车时需要用到的刹车。**这两者都不可或缺，但是想要前进，我们必须要多踩油门而不是刹车。
 
 ## 第六章 创新与成功的困境
 
@@ -75,7 +75,7 @@ AI究竟是“剥夺了我们的工作机会”，还是“催生了新的就业
 
 我一直相信，作为一种习惯，“不断提问”必然会成为人类最基本也最有价值的行为之一。可以马上得到答案的问题就扔给机器，人的价值在于在面对不知道答案的问题时，可以不断思考，不断提问。
 
-正确地提出问题，本身就很有价值。这是探索、科学和创造性的基础，是创新。人类未来的工作将会变成提问，以及应对不确定性。
+**正确地提出问题，本身就很有价值。**这是探索、科学和创造性的基础，是创新。**人类未来的工作将会变成提问，以及应对不确定性。**
 
 最切实的做法是去质疑人们习以为常的事情，学会推翻常理进行思考。虽然所谓的常理和常识大都是正确的，但不排除其中夹杂着错误的东西。如果能够将这些错误找出，就会是一个新的发现。对常识持怀疑态度很重要，质疑是打开新局面的开始。
 
