--- a/_posts/2023-05-14-PaLM-E.md
+++ b/_posts/2023-05-14-PaLM-E.md
@@ -30,13 +30,15 @@ tags:
 > “端到端”（End-to-End）指系统将输入数据直接作为输入，通过一系列处理层（例如神经网络）进行处理，并直接输出最终结果，而不需要手动对输入数据进行特征提取或手动设计中间处理步骤。
 
 ##  Introduction
-1. 大语言模型（LLM）在各个领域表现出强大的**推理能力**，包括对话、分步推理、数学问题解决、代码编写。然而现实世界中此类推理模型的**局限性**在于一个基础问题：如何将**单词和感知**联系起来。
+1. 大语言模型（LLM）在各个领域表现出强大的**推理能力**，包括对话、分步推理、数学问题解决、代码编写。然而现实世界中此类推理模型的**局限性**在于一个**grounding**问题：如何将**单词和感知**联系起来。
 2. 本文提出了具身语言模型，它直接接收传感器模态的连续输入，使语言模型能够为现实世界中的顺序决策做出更为基础的推断。
 
 ## Related Work
 
 1. **通用视觉语言模型**（General vision-language modeling）：VLM能够同时理解图像和文本，并且可以应用于诸如视觉问答、字幕、光学字符识别、物体检测等任务。整合图像的方法各不相同。
 2. **动作输出模型**（Actions-output models）：之前的工作侧重于将具体环境中的视觉和语言输入与直接行动预测目标相结合。
+3. **具身任务规划中的LLM**（LLMs in embodied task planning）：
+
 # 参考
 - [[1] PaLM-E: 具身多模态语言模型](https://zhuanlan.zhihu.com/p/615879292)
 - [论文翻译](https://zhuanlan.zhihu.com/p/613316732)
