--- a/_posts/2023-05-14-PaLM-E.md
+++ b/_posts/2023-05-14-PaLM-E.md
@@ -33,6 +33,8 @@ tags:
 1. 大语言模型（LLM）在各个领域表现出强大的**推理能力**，包括对话、分步推理、数学问题解决、代码编写。然而现实世界中此类推理模型的**局限性**在于一个**grounding**问题：如何将**单词和感知**联系起来。
 2. 本文提出了具身语言模型，它直接接收传感器模态的连续输入，使语言模型能够为现实世界中的顺序决策做出更为基础的推断。
 
+> 在自然语言处理和人工智能领域，"grounding"（也称为"semantic grounding"）是指将语言与实际世界的概念联系起来，使语言具有实际意义和实际执行的能力。简而言之，grounding是将抽象的语言符号与具体的物理世界相对应的过程。
+
 ## Related Work
 
 1. **通用视觉语言模型**（General vision-language modeling）：VLM能够同时理解图像和文本，并且可以应用于诸如视觉问答、字幕、光学字符识别、物体检测等任务。整合图像的方法各不相同。
