--- a/_posts/2023-05-14-PaLM-E.md
+++ b/_posts/2023-05-14-PaLM-E.md
@@ -81,6 +81,11 @@ $
 
 ### 3.4.Multi-modal sentences: injection of continuous observations
 
+传感器观测到的连续状态可以映射到语言嵌入空间$\mathcal{X}$。为此需要训练一个编码器（详见第4节）$\phi=\mathcal{O}\rightarrow\mathcal{X}^q$ 将连续观测$\mathcal{O}$ 映射为$\mathcal{X}$中的q维token向量。然后将这些向量与普通嵌入文本token交错，以形成LLM的前缀。这意味着前缀中的每个向量$x_i$由单词标记嵌入器$\gamma$或编码器$\phi_i$构成（如下式）。注意，单个观测$\mathcal{O}_j$ 通常被编码为多个嵌入向量。
+<img src="/img/in_post/PaLM-E/1.png" width="60%">
+
+## 4.Input & Scene Representations for Different Sensor Modalities
+
 # 参考
 - [[1] PaLM-E: 具身多模态语言模型](https://zhuanlan.zhihu.com/p/615879292)
 - [论文翻译](https://zhuanlan.zhihu.com/p/613316732)
