--- a/_posts/2023-05-14-PaLM-E.md
+++ b/_posts/2023-05-14-PaLM-E.md
@@ -86,6 +86,32 @@ $
 
 ## 4.Input & Scene Representations for Different Sensor Modalities
 
+需要为不同模态的输入设置各自的编码器，将相应的模态映射到语言嵌入空间。
+
+### 4.1.State estimation vectors
+
+状态向量可能是输入到PaLM-e中最简单的，例如来自机器人或对象的状态估计，姿势、大小、颜色等。用MLP将状态向量映射至语言嵌入空间。
+
+> MLP代表多层感知器（Multi-Layer Perceptron）。多层感知器是一种人工神经网络，由多个神经网络层组成，每个层之间的神经元通过权重连接。MLP在深度学习中常用于处理非线性数据建模和分类任务。
+
+### 4.2.Vision Transformer (ViT)
+
+ViT是一种将图像I映射为多个token嵌入的Transformer体系结构。ViT采用了Transformer的思想，将图像分割成一组小的图像块，然后使用Transformer的编码器来对这些图像块进行处理和建模。由于ViT嵌入的维数与语言模型的维数不一定相同，最后需要再经过一个经过学习的仿射变换。
+
+> **Transformer**是一种广泛应用于自然语言处理和计算机视觉任务的神经网络架构。它使用**自注意力机制**来建模序列数据之间的关系，能够捕捉长距离的依赖关系，并在处理序列数据时取得了很好的效果。Transformer由编码器和解码器组成，其中编码器负责将输入序列编码为高维表示，解码器则负责从编码表示生成输出序列。
+
+> **自注意力层**（Self-Attention Layer）是Transformer架构中的关键组成部分之一。它是一种用于处理序列数据的机制，可以捕捉序列中不同位置之间的依赖关系并调整位置的表示。在自注意力层中，输入序列被看作是一组向量序列，每个向量表示序列中的一个位置。对于每个位置，自注意力机制将该位置与其他位置进行关注，以获取其他位置对当前位置的重要性。自注意力机制的核心是计算注意力权重，用于衡量一个位置对其他位置的重要程度。
+
+### 4.3.Object-centric representations
+
+虽然ViT可以捕捉语义信息，但表示的结构更像是静态的网格，而不是对象实例的集合。所以需要结构化编码器，将视觉输入分离为不同的对象。
+
+### 4.4.Object Scene Representation Transformer (OSRT)
+
+另一种不需要真实分割的替代方法是OSRT，它不依赖于外部关于对象的信息，而是通过架构中的归纳偏差以无监督方式发现对象
+
+> 4.3和4.4提到的这两种技术对数据的基本假设是相同的，即认为把一张图片按照网格均匀的划分开，然后对每个网格使用一个向量进行表示，这种方式是不太合理的。因为一张图片中可能会有多个物体（或者称为多个对象），直接对所有的图片都是用相同的网格划分，大概率会把图片中的一个对象划分成了多个部分。而如果能够在划分时以图片中的每个对象为中心进行划分，编码出来的向量应该是更合理的。基于这个原因，提出了上述两种编码技术。
+
 # 参考
 - [[1] PaLM-E: 具身多模态语言模型](https://zhuanlan.zhihu.com/p/615879292)
 - [论文翻译](https://zhuanlan.zhihu.com/p/613316732)
