--- a/_posts/2022-12-23-SLAM14-4.md
+++ b/_posts/2022-12-23-SLAM14-4.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title:  "第4讲 李群与李代数"
-subtitle: "高翔《SLAM十四讲》"
+subtitle: "《SLAM十四讲》高翔"
 date:   2022-12-23 14:31:00 +0800
 author:     "ZhouSh"
 header-img: "img/in_post/SLAM14/head.png"
 header-mask: 0.4
 tags:
-    - SLAM十四讲
+    - 机器人笔记
 ---
 # 第4讲　李群与李代数
 
