--- a/_posts/2022-12-24-SLAM14-5.md
+++ b/_posts/2022-12-24-SLAM14-5.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title:  "第5讲 相机与图像"
-subtitle: "高翔《SLAM十四讲》"
+subtitle: "《SLAM十四讲》高翔"
 date:   2022-12-24 00:00:00 +0800
 author:     "ZhouSh"
 header-img: "img/in_post/SLAM14/head.png"
 header-mask: 0.4
 tags:
-    - SLAM十四讲
+    - 机器人笔记
 ---
 # 第5讲　相机与图像
 
