--- a/_posts/2023-01-10-SLAM14-6.md
+++ b/_posts/2023-01-10-SLAM14-6.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title:  "第6讲 非线形优化"
-subtitle: "高翔《SLAM十四讲》"
+subtitle: "《SLAM十四讲》高翔"
 date:   2023-1-10 17:17:00 +0800
 author:     "ZhouSh"
 header-img: "img/in_post/SLAM14/head.png"
 header-mask: 0.4
 tags:
-    - SLAM十四讲
+    - 机器人笔记
 ---
 # 第6讲　非线形优化
 <!-- $$\begin{equation}
