--- a/_posts/2023-02-24-Cpp-Primer2.md
+++ b/_posts/2023-02-24-Cpp-Primer2.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title:  "C++ Primer：C++标准库"
-subtitle: "第二部分"
+title:  "C++标准库"
+subtitle: "《C++ Primer》第二部分"
 date:   2023-2-24 10:03:00 +0800
 author:     "ZhouSh"
 header-img: "img/bg-guidao9.jpg"
 header-mask: 0.2
 tags:
-    - C++
+    - 机器人笔记
 ---
 ## 八、IO库
 
