--- a/_posts/2023-04-24-SLAM14-13.md
+++ b/_posts/2023-04-24-SLAM14-13.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title:  "第13讲 建图"
-subtitle: "高翔《SLAM十四讲》"
+subtitle: "《SLAM十四讲》高翔"
 date:   2023-4-22 20:47:00 +0800
 author:     "ZhouSh"
 header-img: "img/in_post/SLAM14/head.png"
 header-mask: 0.4
 tags:
-    - SLAM十四讲
+    - 机器人笔记
 ---
 # 第13讲　建图
 
