--- a/_posts/2023-05-24-Cpp-Primer3.md
+++ b/_posts/2023-05-24-Cpp-Primer3.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title:  "C++ Primer：类设计者的工具"
-subtitle: "第三部分"
+title:  "类设计者的工具"
+subtitle: "《C++ Primer》第三部分"
 date:   2023-5-24 15:20:00 +0800
 author:     "ZhouSh"
 header-img: "img/bg-guidao9.jpg"
 header-mask: 0.2
 tags:
-    - C++
+    - 机器人笔记
 ---
 
 ## 十三、拷贝控制
