--- a/_posts/2022-12-8-SLAM14-1-2.md
+++ b/_posts/2022-12-8-SLAM14-1-2.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title:  "第1讲 预备知识 & 第2讲 初始SLAM"
-subtitle: "高翔《SLAM十四讲》"
+subtitle: "《SLAM十四讲》高翔"
 date:   2022-12-8 17:10:00 +0800
 author:     "ZhouSh"
 header-img: "img/in_post/SLAM14/head.png"
 header-mask: 0.4
 tags:
-    - SLAM十四讲
+    - 机器人笔记
 ---
 # 第1讲 预备知识
 
