--- a/_posts/2023-01-14-Cpp-Primer1.md
+++ b/_posts/2023-01-14-Cpp-Primer1.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title:  "C++ Primer：C++基础"
-subtitle: "第一部分"
+title:  "C++基础"
+subtitle: "《C++ Primer》第一部分"
 date:   2023-1-14 16:21:00 +0800
 author:     "ZhouSh"
 header-img: "img/bg-guidao9.jpg"
 header-mask: 0.2
 tags:
-    - C++
+    - 机器人笔记
 ---
 ## 一、开始
 
