--- a/_posts/2023-01-14-SLAM14-7.md
+++ b/_posts/2023-01-14-SLAM14-7.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title:  "第7讲 视觉里程计1"
-subtitle: "高翔《SLAM十四讲》"
+subtitle: "《SLAM十四讲》高翔"
 date:   2023-1-14 15:58:00 +0800
 author:     "ZhouSh"
 header-img: "img/in_post/SLAM14/head.png"
 header-mask: 0.4
 tags:
-    - SLAM十四讲
+    - 机器人笔记
 ---
 # 第7讲　视觉里程计1
 
