--- a/_posts/2023-04-17-SLAM14-11.md
+++ b/_posts/2023-04-17-SLAM14-11.md
@@ -1,13 +1,13 @@
 ---
 layout: post
 title:  "第11讲 后端2"
-subtitle: "高翔《SLAM十四讲》"
+subtitle: "《SLAM十四讲》高翔"
 date:   2023-4-17 16:48:00 +0800
 author:     "ZhouSh"
 header-img: "img/in_post/SLAM14/head.png"
 header-mask: 0.4
 tags:
-    - SLAM十四讲
+    - 机器人笔记
 ---
 # 第11讲　后端2
 
